--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "blessed": "^0.1.81",
+    "blessed-contrib": "^4.11.0",
     "http": "^0.0.1-security",
     "path": "^0.12.7",
     "quickchart-js": "^3.1.3",
